   output a STRING even if the input was a BASE-STRING.

 - TYPE-OF did not recognized EXTENDED-CHARs.

 - Type BASE-STRING and STRING were defined as equivalent.

 - Pathnames now allow extended strings in the names. Errors are signalled,
   however, when a file name contains illegal characters. UTF-8 encoding
   of file names is not supported.

* Other visible changes:

 - The interpreter now makes an attempt at showing the offending form
   when a syntax error happens.
	>  (progn (setq a 1) (setq b) (setq c 2))
	In form
	(SETQ B)
	Syntax error: list with too few elements or improperly terminated.
	Broken at SI:EVAL-WITH-ENV.No restarts available.
	Broken at SI::BREAK-WHERE.

 - The documentation shipped with ECL was outdated. To enforce moving on
   to the new manual, the build and installation process now ignores anything
   inside src/doc.

 - LOAD no longer defaults to loading a file as binary if the file type is
   different from FAS or FASL. Use either SI:LOAD-BINARY or configure the
   variable SI:*LOAD-HOOKS* accordingly to load FASL files with unusual
   extensions.

 - EXT:PROCESS-COMMAND-ARGS now allows for a default rule.

 - Variable EXT:*HELP-MESSAGE* and EXT:+DEFAULT-COMMAND-ARG-RULES+ exported.

 - C:BUILD-PROGRAM now uses a unique prefix for the initialization function,
   init_ECL_PROGRAM, to avoid collisions when both the program and a component
   have the same name:
	(C:BUILD-PROGRAM "ls" :lisp-files '("ls.o"))

 - FFI:CLINES is no longer restricted to appear as a toplevel form. The
   following code is thus valid:
	(defun c-sin (x)
	  (ffi:clines "#include <math.h>")
	  (ffi:c-inline (x) (:double) :double "sin(#0)" :one-liner t))

 - Minimized the number of headers included by ecl/ecl.h. In particular,
   stdio.h, inittypes.h and pthread.h are no longer used.

 - When a compiler finds a literal standard object, the load and initialization
   forms it generates are now closer to the first reference to the object. This